--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:required="true" />
 
     <application
+        android:name=".utils.MyApplicontion"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activitys.HTLM5Activity">
+            android:name=".activitys.HTML5Activity">
         </activity>
     </application>
 
